# IWork-backend

./: .gitignore  .nixpacks.toml  README.md  alembic.ini  pyproject.toml  pytest.ini  railway.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 14f5ff45a6e4_add_oauth_fields_to_user_model.py  156c74c54663_add_email_change_verification_table.py  3a3acba8a639_initial_schema.py  3cd9b85186de_changed_salary_model.py  5329091e9e90_added_intern_type.py  7000080a8c8f_add_postgresql_full_text_search_.py  71b1c5b248a7_add_refresh_token_table.py  a556e12ab965_little_changes.py  c624b84c9aa1_add_file_attachment_model.py  convert_enum_to_string.py  e0695efc691b_add_email_verification_fields.py  e19eea36bcad_add_sec_cik_field_to_company_model.py
app/: main.py
app/api/: admin.py  auth.py  companies.py  files.py  integrations.py  oauth.py  reviews.py  salaries.py  search.py  users.py
app/core/: config.py  dependencies.py  security.py
app/crud/: __init__.py  base.py  crud_company.py  crud_file.py  crud_review.py  crud_salary.py  crud_settings.py  crud_token.py  crud_user.py
app/db/: base.py
app/email-templates/: base.html  email_change.html  reset_password.html  review_approved.html  review_rejected.html  verification.html
app/models/: __init__.py  company.py  file.py  review.py  salary.py  settings.py  token.py  user.py
app/schemas/: company.py  file.py  integrations.py  password_reset.py  review.py  salary.py  search.py  settings.py  token.py  user.py
app/services/: ai_scanner.py  email.py  oauth.py  s3.py  salary_analytics.py  search.py  token_cleanup.py
app/services/integrations/: stock_api.py  tax_api.py
app/utils/: formatters.py  redis_cache.py
tests/: conftest.py  mocks.py
tests/integration/api/: test_auth.py  test_companies.py  test_integrations.py  test_reviews.py  test_search.py  test_users.py
tests/unit/crud/: test_company_crud.py  test_review_crud.py  test_user_crud.py
(+4 files in other folders)
