[tool.poetry]
name = "iwork"
version = "0.1.0"
description = ""
authors = ["Askhat <askhat.ss23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.11"}
sqlalchemy = "^2.0.39"
pydantic = "^2.10.6"
passlib = "^1.7.4"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
upstash-redis = "^1.3.0"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
